--- a/public/cv.html
+++ b/public/cv.html
@@ -105,7 +105,7 @@
 		<p>I completed a PhD under the supervision of Dr Julian Allwood at the Department of Engineering at the
 			University of Cambridge. I won personal funding for the research which considered whether it would be possible
 			to remove print from paper in a way that would allow used sheets to be fed back into a printer and
-			immediately reused. I published four peer-reviewed journal articles. </p>
+			immediately reused. I published five peer-reviewed journal articles. </p>
 
 		<h2>ENGINEERING TEACHER (2003&ndash;2007)</h2>
 
