--- a/public/cv.html
+++ b/public/cv.html
@@ -130,12 +130,12 @@
 		<h2>PROJECT MANAGER (1995&ndash;2000)</h2>
 
 		<p>I was sponsored through university as a project manager in the Defence Engineering and Science Group, part of
-			the Ministry of Defence. I ran small technical projects for Westland aerospace special projects; the Guided
-			Weapons and Surveillance Technical Support group and the Battle Group Battle Management Systems team.</p>
+			the Ministry of Defence. I ran small technical projects for Westland Aerospace Special Projects; the Guided
+			Weapons and Surveillance Technical Support Group and the Battle Group Battle Management Systems Team.</p>
 
 		<p>
-			<a href='https://github.com/tamc'>https://github.com/tamc</a>
-			<a href='https://tom.counsell.org'>https://tom.counsell.org</a>
+			See also: <a href='https://tom.counsell.org'>https://tom.counsell.org</a> and <a
+				href='https://github.com/tamc'>https://github.com/tamc</a>
 		</p>
 	</div>
 
