--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,12 @@ class="email">tom@counsell.org</a>.</p>
 <li>My wife, <a
 href="https://easst.net/easst-review/44-1/catherine-will-symposium/">Professor
 Catherine Marijke Will</a> died. Life is tough.</li>
+<li>I have joined <a href="https://givedirectly.org">Give Directly</a> a
+charity I’ve admired for years that, because of COVID now employs
+developers outside of New York.</li>
+<li>I left <a href="https://tapestry.info">Tapestry</a>. Not because I
+didn’t love Tapestry, but becaues my wife has cancer and I need time to
+care for her and the kids.</li>
 <li>I’ve enjoyed making a <a
 href="programming/usermeter/index.html">server load monitor</a> out of a
 65 year old ammeter for my boss.</li>
