--- a/public/cv.html
+++ b/public/cv.html
@@ -32,8 +32,7 @@
 
 		<h2>SENIOR ENGINEER (2022&ndash;)</h2>
 
-		<p>I work for <a href='https://givedirectly.org'>GiveDirectly</a>, a charity that gives cash to those in poverty,
-			mostly in Africa.</p>
+		<p>I work for GiveDirectly, a charity that gives cash to those in poverty, mostly in Africa.</p>
 
 		<p>I work mostly on fundraising, mostly on the $46&thinsp;million in donations we receive each year from small
 			donors. I write code to give our donors a good experience, ensure we know who they are, reduce fraud and,
