--- a/public/books/thinking-in-time.html
+++ b/public/books/thinking-in-time.html
@@ -11,14 +11,14 @@
     <h1>Thinking in time</h1>
   </header>
   <p>Back to the <a href="/">home page</a></p>
-<p>I&#39;ve been reading <a href="http://www.goodreads.com/book/show/739784.Thinking_in_Time">Thinking in Time: The Uses of History for Decision-Makers
-by Richard E. Neustadt, Ernest R. May</a>. It was reference in a book my wife gave me &mdash; <a href="http://www.goodreads.com/book/show/13592001-distilling-the-frenzy">Distilling the Frenzy: Writing the History of Our Times, by Peter Hennessy</a> &mdash; which hoped that government departments might engage in more thinking about history.</p>
-<p>It is very American, which I&#39;ve enjoyed. Written for &#39;staff&#39; of an executive. Includes lots of American examples of history that don&#39;t resonate with me. But I found the gulf interesting.</p>
-<p>Its main suggestion is to avoid historical analogy and instead look at the history of the specific issue, people and organisations at hand.</p>
-<p>It proposes some &#39;mini-methods&#39;:</p>
+<p>I've been reading <a href="http://www.goodreads.com/book/show/739784.Thinking_in_Time">Thinking in Time: The Uses of History for Decision-Makers
+by Richard E. Neustadt, Ernest R. May</a>. It was reference in a book my wife gave me — <a href="http://www.goodreads.com/book/show/13592001-distilling-the-frenzy">Distilling the Frenzy: Writing the History of Our Times, by Peter Hennessy</a> — which hoped that government departments might engage in more thinking about <a href="/view/History.html">history</a>.</p>
+<p>It is very American, which I've enjoyed. Written for 'staff' of an executive. Includes lots of American examples of <a href="/view/History.html">history</a> that don't resonate with me. But I found the gulf interesting.</p>
+<p>Its main suggestion is to avoid historical analogy and instead look at the <a href="/view/History.html">history</a> of the specific issue, people and organisations at hand.</p>
+<p>It proposes some 'mini-methods':</p>
 <ol>
-<li>When confronting a problem, don&#39;t rush to solutions. Take some time to think about what about the problem is known, what is unclear and what is presumed. If people present analogies, separate out the liknesses and differences of those analogues.</li>
-<li>Don&#39;t ask what is the problem; Ask what is the story?</li>
+<li>When confronting a problem, don't rush to solutions. Take some time to think about what about the problem is known, what is unclear and what is presumed. If people present analogies, separate out the liknesses and differences of those analogues.</li>
+<li>Don't ask what is the problem; Ask what is the story?</li>
 <li>Develop a time-line of an issue. Make sure it goes back to the start of the story, not just the start of the problem.</li>
 <li>When filling out the timeline, use the questions that journalists ask of a story: when? what? where? who? how? why?</li>
 <li>Looking at presumptions, get people to give odds on whether they think it is correct, rather than generalities that can be miss-interpreted.</li>
