--- a/public/site-index.html
+++ b/public/site-index.html
@@ -48,6 +48,7 @@
 <li><a href="/view/H1Namesakes.html">H1Namesakes</a></li>
 <li><a href="/view/HarryPotter.html">Harry Potter</a></li>
 <li><a href="/view/History.html">History</a></li>
+<li><a href="/programming/how-loud-does-a-dinosaur-roar/index.html">How loud does a dinosaur roar?</a></li>
 <li><a href="/view/HowToContactMe.html">how to contact me</a></li>
 </ul>
 <h2 id="letter-I">I</h2>
@@ -74,6 +75,7 @@
 <h2 id="letter-P">P</h2>
 <ul>
 <li><a href="/view/PagesBibtex.html">Pages bibliography</a></li>
+<li><a href="/view/Phd.html">PhD</a></li>
 <li><a href="/view/PictureOfIkeaChairThatIAmSelling.html">PictureOfIkeaChairThatIAmSelling</a></li>
 <li><a href="/view/PictureOfIkeaDrawersThatIAmSelling.html">PictureOfIkeaDrawersThatIAmSelling</a></li>
 <li><a href="/view/PictureOfTomCounsell.html">PictureOfTomCounsell</a></li>
