--- a/public/programming/index.html
+++ b/public/programming/index.html
@@ -27,24 +27,24 @@
 <li>A web based event booking system ( <a href="http://mcr.clare.cam.ac.uk/events/">http://mcr.clare.cam.ac.uk/events/</a>
 )</li>
 <li>A web based resource (e.g. rooms, boats) booking system</li>
-<li>A wiki (that is hosting this) designed for <a href="Phd.html">PhD</a> note taking ( <a href="http://www.soks.org">http://www.soks.org</a> )</li>
+<li>A wiki (that is hosting this) designed for <a href="/view/Phd.html">PhD</a> note taking ( <a href="http://www.soks.org">http://www.soks.org</a> )</li>
 </ul>
 <h2>Random scripts &amp; notes</h2>
 <ul>
-<li><a href="ExcelToLatexTableConvertor.html">Excel to Latex table convertor</a> -- Thanks to Alan Munn ,this now exists <a href="http://www.ctan.org/pkg/csv2latex">CTAN</a></li>
-<li>A <a href="TextileToHtml.html">textile to html</a> convertor</li>
-<li><a href="AnAcronymFinder.html">An acronym finder</a></li>
-<li><a href="ABoringFileForDarcsAndRails.html">A boring file for darcs and rails</a></li>
-<li><a href="ARakeTaskToSetTheFilePermissionsAndOwnershipInARailsProject.html">A rake task to set the file permissions and ownership in a rails project</a></li>
-<li><a href="AccessingActioncontrollerFromActionmailerUsingIntegrationSession.html">Accessing ActionController from ActionMailer using Integration::Session</a></li>
-<li><a href="ApplescriptToSendMessageTo30boxes.html">Applescript to send message to 30boxes</a></li>
-<li><a href="EarlyExperiencesWithActiveResource.html">Early experiences with Active Resource</a></li>
+<li><a href="/view/ExcelToLatexTableConvertor.html">Excel to Latex table convertor</a> -- Thanks to Alan Munn ,this now exists <a href="http://www.ctan.org/pkg/csv2latex">CTAN</a></li>
+<li>A <a href="/view/TextileToHtml.html">textile to html</a> convertor</li>
+<li><a href="/view/AnAcronymFinder.html">An acronym finder</a></li>
+<li><a href="/view/ABoringFileForDarcsAndRails.html">A boring file for darcs and rails</a></li>
+<li><a href="/view/ARakeTaskToSetTheFilePermissionsAndOwnershipInARailsProject.html">A rake task to set the file permissions and ownership in a rails project</a></li>
+<li><a href="/view/AccessingActioncontrollerFromActionmailerUsingIntegrationSession.html">Accessing ActionController from ActionMailer using Integration::Session</a></li>
+<li><a href="/view/ApplescriptToSendMessageTo30boxes.html">Applescript to send message to 30boxes</a></li>
+<li><a href="/view/EarlyExperiencesWithActiveResource.html">Early experiences with Active Resource</a></li>
 <li>Helped with some fixes for a tool to <a href="http://www.opendarwin.org/~landonf/software/Omni-LaTeX/">translate OmniOutliner notes into Latex</a>.</li>
 </ul>
 <h2>My history as a programmer</h2>
 <p>My mum taught me to program when I was aged 8 or so, in <a href="http://www.bbcbasic.org">BBC Basic</a> on (you guessed it) a <a href="http://en.wikipedia.org/wiki/BBC_Microcomputer">beeb</a>, I then graduated onto programming in Assembler and some Pascal on the BBC and on my <a href="http://en.wikipedia.org/wiki/Acorn_Archimedes">arc</a>.</p>
 <p>During my university years I worked for a few start-ups doing some coding in Java including a web-server that customised content to the person viewing it in the days when that was pretty novel and high tech, and some work on electronic health records.</p>
-<p>I didn't do any programming while I was working as a <a href="http://www.marakon.com">Strategy Consultant</a>, but re-learnt when I went back to University for my <a href="Phd.html">PhD</a> where I produced a bunch of handy web applications including <a href="https://talks.cam.ac.uk">https://talks.cam.ac.uk</a> which, astoundingly to me, the University kept running without updates from 2007 to 2024.</p>
+<p>I didn't do any programming while I was working as a <a href="http://www.marakon.com">Strategy Consultant</a>, but re-learnt when I went back to University for my <a href="/view/Phd.html">PhD</a> where I produced a bunch of handy web applications including <a href="https://talks.cam.ac.uk">https://talks.cam.ac.uk</a> which, astoundingly to me, the University kept running without updates from 2007 to 2024.</p>
 <p>I then worked in Strategy again, at the <a href="https://www.carbontrust.com">Carbon Trust</a> before entering the <a href="https://www.gov.uk/government/organisations/department-of-energy-climate-change">UK Civil Service</a>. The Civil Service didn't permit any programming languages on their computers, just Excel. So during my commute I wrote some software that could convert Excel spreadsheets to C, so you could use them to back websites and do much more sophisticated analysis. I also wrote a lot of javascript tools, since they could be used by civil servants in their browsers. None of which was my job.</p>
 <p>My first child came along just as Apple relased the app store. So I wrote a little app to help my wife track her breastfeeding. It was the first of its kind on the app store, though there are many like it now.</p>
 <p>But then in 2015 I actually started working as a full-time, paid programmer. Writing code to power <a href="https://tapestry.info">Tapestry</a> a web service for nurseries. It was a tiny firm when I started so I did everything - the site, the iOS and Android apps, the servers, the internal tools, everything. But I loved it.</p>
